[gd_scene load_steps=12 format=2]

[ext_resource path="res://Characters/Harris.gd" type="Script" id=1]
[ext_resource path="res://Sounds/quick_swing.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/long_swing.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/hit_end.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/cardSlide8.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/cardSlide7.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/close_001.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprites/Biden/0005.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Biden/0001.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Hit High",
"speed": 5.0
} ]

[node name="Biden" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 1 )
animation = "Idle"
script = ExtResource( 1 )

[node name="Block" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -3.979
pitch_scale = 1.17

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.7

[node name="QuickSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.5

[node name="LongSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.25

[node name="QuickTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="LongTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="HitEnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.7
